# KirkForge-Bots-Discord_Packy

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.cognition  LICENSE  README.md  docker-compose.yml  ecosystem.config.cjs  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  state.md  toggle-packy.sh  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
data/: packy_memory.json  packy_war_stories.json
data/lorebook/: category_concepts.json  concept_graph.json  glitch_lorebook.json  kronos_lorebook.json  new_lore_entries.json  packy_lorebook_structured.json  subpizzalore.json  subtechlore.json  subwarstories.json  sunjinwo_lorebook.json  top_level.json  vernon_lorebook.json
docs/: ADR.md  MINIMAX_PROMPTS.md  PERSONALITY_BUILD_PLAN.md  PROJECT_OVERVIEW.md
landing/: README.md  index.html  pricing.html  style.css  success.html
license/: __init__.py  claims.py  errors.py  features.py  keys.py  loader.py  paths.py  verifier.py
sales/: .env.example  Dockerfile  README.md  __init__.py  __main__.py  app.py  config.py  db.py  emailer.py  license_signer.py
scripts/: lore_stats.py  merge_lore.py  register_commands.sh  start.sh  stop.sh
test/: smoke.js  smoke.py  smoke.test.js  test_adapters.js  test_cognition.py  test_endpoint.js  test_services.py
tests/: conftest.py  test_admin.py  test_auth_startup.py  test_compose_fallback.py  test_license.py  test_sales.py  test_update.py
tools/: __init__.py  keygen.py  release.py
update/: __init__.py  __main__.py  checker.py  keys.py  manifest.py
(+148 files in other folders)
