[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gargoyle-packy"
version = "2.0.0"
description = "Gargoyle Packy — lore-rich Discord character bot with dual-mode (direct/microservice)"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Henrik Kirk", email = "285947470+KirkForge@users.noreply.github.com"}]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "psutil>=5.9.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "ruff>=0.1"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
ignore = ["E402"]  # sys.path.insert pattern requires imports after path setup

[tool.pytest.ini_options]
testpaths = ["test", "tests"]
